restructured as an installable package

--- a/examples/banana.ipynb
+++ b/examples/banana.ipynb
@@ -10,18 +10,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "a137f80d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Some imports"
+    "# Some imports\n",
+    "import numpy as np\n",
+    "import sys\n",
+    "import os\n",
+    "module_path = os.path.abspath(os.path.join('/home/sanjan/PhD/samosa/utils'))  # Adjust this path as needed\n",
+    "sys.path.insert(0, module_path)\n",
+    "from tools import log_banana\n",
+    "from typing import List, Tuple, Dict"
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "2a99ff03",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6c0b0a66",
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Lets define the banana model\n",
+    "# The inputs will be the sample (x: np.ndarray of shape (n_dim, n_samples))\n",
+    "# The outputs will be the log posterior (log_posterior: np.ndarray of shape (n_samples,)) or the log likelihood and the log prior\n",
+    "# In this case, we will define the log posterior directly\n",
+    "# Note that other additional quantities like qoi, cost_model_output etc. can be defined\n",
+    "\n",
+    "def banana_model(x: np.ndarray) -> Dict"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "409d5162",
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
