Fixed TransportSYNCE Kernel Added some test cases for TransportSYNCE

--- a/examples/gaussian_coupled.ipynb
+++ b/examples/gaussian_coupled.ipynb
@@ -248,6 +248,87 @@
     "# plt.show()\n",
     "# plt.close(fig)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a505fe5a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# This is just a simple example of how to use the samosa package\n",
+    "from samosa.kernels.synce import SYNCEKernel\n",
+    "from samosa.proposals.gaussianproposal import GaussianRandomWalk\n",
+    "from samosa.proposals.adapters import HaarioAdapter, GlobalAdapter\n",
+    "from samosa.core.proposal import AdaptiveProposal\n",
+    "\n",
+    "from samosa.samplers.coupled_chain import coupledMCMCsampler\n",
+    "\n",
+    "from samosa.utils.post_processing import get_position_from_states\n",
+    "\n",
+    "# Define the proposal\n",
+    "proposal = GaussianRandomWalk(mu=np.zeros((2,1)), sigma=np.eye(2))\n",
+    "# adapter = HaarioAdapter(scale=2.38**2/2, adapt_start=1000, adapt_end=10000)\n",
+    "adapter = GlobalAdapter(ar=0.44, adapt_start=100, adapt_end=20000)\n",
+    "adaptive_proposal = AdaptiveProposal(proposal, adapter)\n",
+    "\n",
+    "model_coarse = gaussian_model_coarse\n",
+    "model_fine = gaussian_model_fine\n",
+    "\n",
+    "# Define the kernel\n",
+    "kernel = SYNCEKernel(model_coarse, model_fine)\n",
+    "\n",
+    "sampler = coupledMCMCsampler(model_coarse, model_fine, kernel, adaptive_proposal, adaptive_proposal, initial_position_coarse=np.zeros((2, 1)), initial_position_fine=np.zeros((2, 1)), n_iterations=50000) \n",
+    "ar1, ar2 = sampler.run('coupledGaussian')\n",
+    "\n",
+    "print(\"Acceptance rate:\", ar1)\n",
+    "print(\"Acceptance rate:\", ar2)\n",
+    "\n",
+    "# Load samples from the output directory\n",
+    "samples_coarse, samples_fine = sampler.load_samples('coupledGaussian')\n",
+    "\n",
+    "# Get the positions of the samples\n",
+    "burnin = 0.4\n",
+    "positions_coarse = get_position_from_states(samples_coarse, burnin)\n",
+    "positions_fine = get_position_from_states(samples_fine, burnin)\n",
+    "print(\"Positions shape:\", positions_coarse.shape)\n",
+    "\n",
+    "print(\"Mean of the coarse samples:\", np.mean(positions_coarse, axis=1))\n",
+    "print(\"Standard deviation of the samples:\", np.std(positions_fine, axis=1))\n",
+    "\n",
+    "print(\"Mean of the fine samples:\", np.mean(positions_fine, axis=1))\n",
+    "print(\"Standard deviation of the samples:\", np.std(positions_fine, axis=1))\n",
+    "\n",
+    "# Compute the correlation between positions_fine and positions_coarse\n",
+    "correlations = []\n",
+    "for i in range(positions_fine.shape[0]):\n",
+    "    correlation_matrix = np.corrcoef(positions_fine[i], positions_coarse[i])\n",
+    "    correlation = correlation_matrix[0, 1]\n",
+    "    correlations.append(correlation)\n",
+    "    print(f\"Correlation in dimension {i + 1}: {correlation}\")\n",
+    "\n",
+    "# Plot the scatter plot of the samples\n",
+    "# from samosa.utils.post_processing import scatter_matrix, plot_trace, plot_lag\n",
+    "# fig, _, _ = scatter_matrix([positions_coarse, positions_fine])\n",
+    "# plt.show()\n",
+    "# plt.close(fig)\n",
+    "\n",
+    "# Plot the trace of the samples\n",
+    "# fig, _ = plot_trace(positions_coarse)\n",
+    "# plt.show()\n",
+    "# plt.close(fig)\n",
+    "# fig, _ = plot_trace(positions_fine)\n",
+    "# plt.show()\n",
+    "# plt.close(fig)\n",
+    "\n",
+    "# Plot the lag of the samples\n",
+    "# fig, _ = plot_lag(positions_coarse)\n",
+    "# plt.show()\n",
+    "# plt.close(fig)\n",
+    "# fig, _ = plot_lag(positions_fine)\n",
+    "# plt.show()\n",
+    "# plt.close(fig)"
+   ]
   }
  ],
  "metadata": {
