lot of changes Major ones are pCN, mlmc class

--- a/examples/gaussian_coupled.ipynb
+++ b/examples/gaussian_coupled.ipynb
@@ -344,19 +344,127 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "a505fe5a",
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "coupledMCMCsampler.__init__() got multiple values for argument 'initial_position_coarse'",
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Iteration 1000/50000\n",
+      "Saved samples at iteration 1000 to coupledGaussian/samples_1000.pkl\n",
+      "Iteration 2000/50000\n",
+      "Saved samples at iteration 2000 to coupledGaussian/samples_2000.pkl\n",
+      "Iteration 3000/50000\n",
+      "Saved samples at iteration 3000 to coupledGaussian/samples_3000.pkl\n",
+      "Iteration 4000/50000\n",
+      "Saved samples at iteration 4000 to coupledGaussian/samples_4000.pkl\n",
+      "Iteration 5000/50000\n",
+      "Saved samples at iteration 5000 to coupledGaussian/samples_5000.pkl\n",
+      "Iteration 6000/50000\n",
+      "Saved samples at iteration 6000 to coupledGaussian/samples_6000.pkl\n",
+      "Iteration 7000/50000\n",
+      "Saved samples at iteration 7000 to coupledGaussian/samples_7000.pkl\n",
+      "Iteration 8000/50000\n",
+      "Saved samples at iteration 8000 to coupledGaussian/samples_8000.pkl\n",
+      "Iteration 9000/50000\n",
+      "Saved samples at iteration 9000 to coupledGaussian/samples_9000.pkl\n",
+      "Iteration 10000/50000\n",
+      "Saved samples at iteration 10000 to coupledGaussian/samples_10000.pkl\n",
+      "Iteration 11000/50000\n",
+      "Saved samples at iteration 11000 to coupledGaussian/samples_11000.pkl\n",
+      "Iteration 12000/50000\n",
+      "Saved samples at iteration 12000 to coupledGaussian/samples_12000.pkl\n",
+      "Iteration 13000/50000\n",
+      "Saved samples at iteration 13000 to coupledGaussian/samples_13000.pkl\n",
+      "Iteration 14000/50000\n",
+      "Saved samples at iteration 14000 to coupledGaussian/samples_14000.pkl\n",
+      "Iteration 15000/50000\n",
+      "Saved samples at iteration 15000 to coupledGaussian/samples_15000.pkl\n",
+      "Iteration 16000/50000\n",
+      "Saved samples at iteration 16000 to coupledGaussian/samples_16000.pkl\n",
+      "Iteration 17000/50000\n",
+      "Saved samples at iteration 17000 to coupledGaussian/samples_17000.pkl\n",
+      "Iteration 18000/50000\n",
+      "Saved samples at iteration 18000 to coupledGaussian/samples_18000.pkl\n",
+      "Iteration 19000/50000\n",
+      "Saved samples at iteration 19000 to coupledGaussian/samples_19000.pkl\n",
+      "Iteration 20000/50000\n",
+      "Saved samples at iteration 20000 to coupledGaussian/samples_20000.pkl\n",
+      "Iteration 21000/50000\n",
+      "Saved samples at iteration 21000 to coupledGaussian/samples_21000.pkl\n",
+      "Iteration 22000/50000\n",
+      "Saved samples at iteration 22000 to coupledGaussian/samples_22000.pkl\n",
+      "Iteration 23000/50000\n",
+      "Saved samples at iteration 23000 to coupledGaussian/samples_23000.pkl\n",
+      "Iteration 24000/50000\n",
+      "Saved samples at iteration 24000 to coupledGaussian/samples_24000.pkl\n",
+      "Iteration 25000/50000\n",
+      "Saved samples at iteration 25000 to coupledGaussian/samples_25000.pkl\n",
+      "Iteration 26000/50000\n",
+      "Saved samples at iteration 26000 to coupledGaussian/samples_26000.pkl\n",
+      "Iteration 27000/50000\n",
+      "Saved samples at iteration 27000 to coupledGaussian/samples_27000.pkl\n",
+      "Iteration 28000/50000\n",
+      "Saved samples at iteration 28000 to coupledGaussian/samples_28000.pkl\n",
+      "Iteration 29000/50000\n",
+      "Saved samples at iteration 29000 to coupledGaussian/samples_29000.pkl\n",
+      "Iteration 30000/50000\n",
+      "Saved samples at iteration 30000 to coupledGaussian/samples_30000.pkl\n",
+      "Iteration 31000/50000\n",
+      "Saved samples at iteration 31000 to coupledGaussian/samples_31000.pkl\n",
+      "Iteration 32000/50000\n",
+      "Saved samples at iteration 32000 to coupledGaussian/samples_32000.pkl\n",
+      "Iteration 33000/50000\n",
+      "Saved samples at iteration 33000 to coupledGaussian/samples_33000.pkl\n",
+      "Iteration 34000/50000\n",
+      "Saved samples at iteration 34000 to coupledGaussian/samples_34000.pkl\n",
+      "Iteration 35000/50000\n",
+      "Saved samples at iteration 35000 to coupledGaussian/samples_35000.pkl\n",
+      "Iteration 36000/50000\n",
+      "Saved samples at iteration 36000 to coupledGaussian/samples_36000.pkl\n",
+      "Iteration 37000/50000\n",
+      "Saved samples at iteration 37000 to coupledGaussian/samples_37000.pkl\n",
+      "Iteration 38000/50000\n",
+      "Saved samples at iteration 38000 to coupledGaussian/samples_38000.pkl\n",
+      "Iteration 39000/50000\n",
+      "Saved samples at iteration 39000 to coupledGaussian/samples_39000.pkl\n",
+      "Iteration 40000/50000\n",
+      "Saved samples at iteration 40000 to coupledGaussian/samples_40000.pkl\n",
+      "Iteration 41000/50000\n",
+      "Saved samples at iteration 41000 to coupledGaussian/samples_41000.pkl\n",
+      "Iteration 42000/50000\n",
+      "Saved samples at iteration 42000 to coupledGaussian/samples_42000.pkl\n",
+      "Iteration 43000/50000\n",
+      "Saved samples at iteration 43000 to coupledGaussian/samples_43000.pkl\n",
+      "Iteration 44000/50000\n",
+      "Saved samples at iteration 44000 to coupledGaussian/samples_44000.pkl\n",
+      "Iteration 45000/50000\n",
+      "Saved samples at iteration 45000 to coupledGaussian/samples_45000.pkl\n",
+      "Iteration 46000/50000\n",
+      "Saved samples at iteration 46000 to coupledGaussian/samples_46000.pkl\n",
+      "Iteration 47000/50000\n",
+      "Saved samples at iteration 47000 to coupledGaussian/samples_47000.pkl\n",
+      "Iteration 48000/50000\n",
+      "Saved samples at iteration 48000 to coupledGaussian/samples_48000.pkl\n",
+      "Iteration 49000/50000\n",
+      "Saved samples at iteration 49000 to coupledGaussian/samples_49000.pkl\n",
+      "Iteration 50000/50000\n",
+      "Saved samples at iteration 50000 to coupledGaussian/samples_50000.pkl\n",
+      "Acceptance rate: 0.41646\n",
+      "Acceptance rate: 0.41156\n"
+     ]
+    },
+    {
+     "ename": "AttributeError",
+     "evalue": "'coupledMCMCsampler' object has no attribute 'load_samples'",
      "output_type": "error",
      "traceback": [
       "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mTypeError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[5]\u001b[39m\u001b[32m, line 23\u001b[39m\n\u001b[32m     20\u001b[39m \u001b[38;5;66;03m# Define the kernel\u001b[39;00m\n\u001b[32m     21\u001b[39m kernel = SYNCEKernel(model_coarse, model_fine)\n\u001b[32m---> \u001b[39m\u001b[32m23\u001b[39m sampler = \u001b[43mcoupledMCMCsampler\u001b[49m\u001b[43m(\u001b[49m\u001b[43mmodel_coarse\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mmodel_fine\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mkernel\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43madaptive_proposal\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43madaptive_proposal\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43minitial_position_coarse\u001b[49m\u001b[43m=\u001b[49m\u001b[43mnp\u001b[49m\u001b[43m.\u001b[49m\u001b[43mzeros\u001b[49m\u001b[43m(\u001b[49m\u001b[43m(\u001b[49m\u001b[32;43m2\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[32;43m1\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43minitial_position_fine\u001b[49m\u001b[43m=\u001b[49m\u001b[43mnp\u001b[49m\u001b[43m.\u001b[49m\u001b[43mzeros\u001b[49m\u001b[43m(\u001b[49m\u001b[43m(\u001b[49m\u001b[32;43m2\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[32;43m1\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mn_iterations\u001b[49m\u001b[43m=\u001b[49m\u001b[32;43m50000\u001b[39;49m\u001b[43m)\u001b[49m \n\u001b[32m     24\u001b[39m ar1, ar2 = sampler.run(\u001b[33m'\u001b[39m\u001b[33mcoupledGaussian\u001b[39m\u001b[33m'\u001b[39m)\n\u001b[32m     26\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[33mAcceptance rate:\u001b[39m\u001b[33m\"\u001b[39m, ar1)\n",
-      "\u001b[31mTypeError\u001b[39m: coupledMCMCsampler.__init__() got multiple values for argument 'initial_position_coarse'"
+      "\u001b[31mAttributeError\u001b[39m                            Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[6]\u001b[39m\u001b[32m, line 30\u001b[39m\n\u001b[32m     27\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[33mAcceptance rate:\u001b[39m\u001b[33m\"\u001b[39m, ar2)\n\u001b[32m     29\u001b[39m \u001b[38;5;66;03m# Load samples from the output directory\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m30\u001b[39m samples_coarse, samples_fine = \u001b[43msampler\u001b[49m\u001b[43m.\u001b[49m\u001b[43mload_samples\u001b[49m(\u001b[33m'\u001b[39m\u001b[33mcoupledGaussian\u001b[39m\u001b[33m'\u001b[39m)\n\u001b[32m     32\u001b[39m \u001b[38;5;66;03m# Get the positions of the samples\u001b[39;00m\n\u001b[32m     33\u001b[39m burnin = \u001b[32m0.4\u001b[39m\n",
+      "\u001b[31mAttributeError\u001b[39m: 'coupledMCMCsampler' object has no attribute 'load_samples'"
      ]
     }
    ],
